--- a/src/test/report/report.html
+++ b/src/test/report/report.html
@@ -181,9 +181,9 @@
         
     <div class='page-header'>
         <h1>接口自动化测试报告</h1>
-    <p class='attribute'><strong>开始时间:</strong> 2020-05-26 14:45:25</p>
-<p class='attribute'><strong>运行时长:</strong> 0:00:00.365710</p>
-<p class='attribute'><strong>状态:</strong> 通过 3</p>
+    <p class='attribute'><strong>开始时间:</strong> 2020-06-04 17:11:59</p>
+<p class='attribute'><strong>运行时长:</strong> 0:00:00.601823</p>
+<p class='attribute'><strong>状态:</strong> 通过 2</p>
 
     </div>
     <div style="float: left;width:50%;"><p class='description'>测试者：yl</p></div>
@@ -215,7 +215,7 @@
         </tr>
         
     <tr class='passClass'>
-        <td>test.tankAreas.util_test.Add.Case</td>
+        <td>src.test.util_test.tankAreas.Test</td>
         <td>1</td>
         <td>1</td>
         <td>0</td>
@@ -224,42 +224,28 @@
     </tr>
 
 <tr id='pt1.1' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_case01</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt1.1')" >
-        通过</a>
-    <div id='div_pt1.1' class="popup_window">
-        <pre>pt1.1: 接口正常
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-    <tr class='passClass'>
-        <td>test.tankAreas.util_test.test_unnitest.Test</td>
-        <td>2</td>
-        <td>2</td>
-        <td>0</td>
-        <td>0</td>
-        <td><a href="javascript:showClassDetail('c2',2)">详情</a></td>
-    </tr>
-
-<tr id='pt2.1' class='hiddenRow'>
     <td class='none'><div class='testcase'>tankAreas_add</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
-<tr id='pt2.2' class='hiddenRow'>
-    <td class='none'><div class='testcase'>tankAreas_add</div></td>
+    <tr class='passClass'>
+        <td>src.test.util_test.riskAreas.RiskAreas</td>
+        <td>1</td>
+        <td>1</td>
+        <td>0</td>
+        <td>0</td>
+        <td><a href="javascript:showClassDetail('c2',1)">详情</a></td>
+    </tr>
+
+<tr id='pt2.1' class='hiddenRow'>
+    <td class='none'><div class='testcase'>riskAreasAdd</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
         <tr id='total_row'>
             <td>总计</td>
-            <td>3</td>
-            <td>3</td>
+            <td>2</td>
+            <td>2</td>
             <td>0</td>
             <td>0</td>
             <td>&nbsp;</td>
@@ -294,7 +280,7 @@
                     radius : '60%',
                     center: ['50%', '60%'],
                     data:[
-                        {value:3, name:'通过'},
+                        {value:2, name:'通过'},
                         {value:0, name:'失败'},
                         {value:0, name:'错误'}
                     ],
